- Fix label z-index on current value RangeField component

--- a/Resources/assets/sass/front/fields/_range-field.scss
+++ b/Resources/assets/sass/front/fields/_range-field.scss
@@ -2,6 +2,16 @@
     margin-top: 40px;
     .container-range{
         margin-bottom: 35px;
+        &.hidden-label-left{
+            li.rangeslider__label-item:nth-child(1){
+                display: none;
+            }
+        }
+        &.hidden-label-right{
+            li.rangeslider__label-item:nth-child(2){
+                display: none;
+            }
+        }
         .container-label{
             height: 52px;
             p{
